--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-# Add a JWT secret and expiration for dev (override in production with env vars)
-jwt.secret=change-me-to-a-long-random-secret
-jwt.expiration-ms=3600000
+spring.application.name=learningpathgenerator
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/learningpath}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin123}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+jwt.secret=${JWT_SECRET:mySecretKeyForJWT123456789012345678901234567890}
+jwt.expiration=${JWT_EXPIRATION_MS:86400000}
