after front end correction

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,13 +1,13 @@
 # PostgreSQL profile - activate with: --spring.profiles.active=postgres
 
 # Use env vars if provided (good for Docker / production)
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/learning}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/learningpath}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:lp_user}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Strongpwd123}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
