--- a/build.gradle
+++ b/build.gradle
@@ -15,15 +15,12 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security'   // <- required
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Hikari (optional - bundled with starter)
     implementation 'com.zaxxer:HikariCP:5.0.1'
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
-    implementation 'org.springframework.boot:spring-boot-starter-security'   // required
     implementation 'org.springframework.security:spring-security-crypto'
-
-
 
     // JWT libs (if using JWT)
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
