--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,12 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -29,6 +35,19 @@ dependencies {
 
     runtimeOnly 'org.postgresql:postgresql:42.6.0'
     runtimeOnly 'com.h2database:h2'
+
+    // ========== NEW ADDITIONS BELOW ==========
+
+    // Lombok - for @Data, @RequiredArgsConstructor, @Slf4j annotations
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+    // Jackson - for JSON serialization/deserialization (datetime support)
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
+
+    // ========== END OF NEW ADDITIONS ==========
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
