--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 jwt.secret=${JWT_SECRET:mySecretKeyForJWT123456789012345678901234567890}
 jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
+jwt.expiration=${JWT_EXPIRATION:86400000}
