registration login perfect

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -3,7 +3,7 @@
 # Use env vars if provided (good for Docker / production)
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/learningpath}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:lp_user}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Strongpwd123}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:lp_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
