production ready learning path generator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,27 @@
 spring.application.name=learningpathgenerator
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:testdb}
+
+# Change to file-based H2 database for persistence
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:file:./data/learningpathdb}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+
+# H2 Console settings
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.settings.web-allow-others=true
+
+# Change ddl-auto to update (from create-drop) to persist data
+spring.jpa.hibernate.ddl-auto=update
+
+# JPA settings
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# JWT settings
 jwt.secret=${JWT_SECRET:mySecretKeyForJWT123456789012345678901234567890}
 jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
 jwt.expiration=${JWT_EXPIRATION:86400000}
