--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,14 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.4'
-    id 'io.spring.dependency-management' version '1.1.2'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+java {
+    sourceCompatibility = '17'
 }
 
 repositories {
@@ -19,40 +16,32 @@ repositories {
 }
 
 dependencies {
+    // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    // Hikari (optional - bundled with starter)
-    implementation 'com.zaxxer:HikariCP:5.0.1'
-    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
-    implementation 'org.springframework.security:spring-security-crypto'
+    // JWT Dependencies
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
-    // JWT libs (if using JWT)
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    // Database (choose one)
+    runtimeOnly 'com.h2database:h2' // For development
+    // runtimeOnly 'com.mysql:mysql-connector-j' // For MySQL
+    // runtimeOnly 'org.postgresql:postgresql' // For PostgreSQL
 
-    runtimeOnly 'org.postgresql:postgresql:42.6.0'
-    runtimeOnly 'com.h2database:h2'
+    // Lombok (optional, for reducing boilerplate)
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
-    // ========== NEW ADDITIONS BELOW ==========
-
-    // Lombok - for @Data, @RequiredArgsConstructor, @Slf4j annotations
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
-    testCompileOnly 'org.projectlombok:lombok:1.18.30'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
-
-    // Jackson - for JSON serialization/deserialization (datetime support)
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
-
-    // ========== END OF NEW ADDITIONS ==========
-
+    // Testing Dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
-tasks.withType(Test) {
+tasks.named('test') {
     useJUnitPlatform()
 }
